--- a/css/smart-phone.css
+++ b/css/smart-phone.css
@@ -13,6 +13,15 @@
     padding: 0;
     margin: 0;
   }
+  .fa-spinner {
+    font-size: 80px;
+    color: green;
+    position: absolute;
+    left: 320px;
+    bottom: 5px;
+    transition-duration: 3s;
+    opacity: 0;
+  }
   .dish-palette {
     background-color: #fff;
     transition: background-color 250ms;
@@ -26,15 +35,16 @@
   }
   .navigation img {
     width: 260px;
-    padding: 20px 0 20px 200px;
+    padding: 20px 0 20px 245px;
   }
   .search-btn-wrap {
+    display: flex;
     background-color: #9356DC;
-    padding: 25px 0 25px 50px;
-    text-align: center;
+    padding: 35px 0 25px 250px;
     box-shadow: rgba(11, 10, 10, 0.18) 0px 13px 12px 0px inset;
   }
   .search-btn-wrap input {
+    width: 100%;
     border: none;
     background-color: #9356DC;
     padding-left: 15px;
@@ -43,6 +53,9 @@
   }
   .search-btn-wrap input::placeholder {
     color: #000;
+  }
+  .fa-map-marker-alt {
+    font-size: 25px;
   }
   .head {
     background-color: #99E2D0;
@@ -152,6 +165,8 @@
     flex-direction: row;
     align-items: flex-start;
     flex-wrap: wrap;
+  }
+  .rst-ad a {
     text-decoration: none;
   }
   .rst-ad span {
@@ -161,26 +176,12 @@
     padding: 10px 40px;
     font-family: Roboto;
     font-weight: 700;
-    margin: 20px 0 0 470px;
+    margin: 20px 0 0 -150px;
     position: absolute;
   }
   .rst-ad img {
     width: 100%;
     border-radius: 25px 25px 0 0;
-  }
-  .fa-heart {
-    font-size: 50px;
-    background-color: #fff;
-    color: gray;
-  }
-  .fa-heart:hover {
-    display: none;
-  }
-  .fa-heart .fas fa-heart {
-    color: #9356DC;
-  }
-  .fa-heart .fas fa-heart:hover {
-    color: #9356DC;
   }
   .ad-info {
     width: 100%;
@@ -202,6 +203,35 @@
     font-size: 25px;
     font-weight: 400;
     color: grey;
+  }
+  .main-heart {
+    width: auto;
+    position: absolute;
+    right: px;
+    bottom: -980px;
+    left: 640px;
+  }
+  .main-heart1 {
+    font-size: 40px;
+    position: absolute;
+    right: -42px;
+    top: 2px;
+    opacity: 1;
+  }
+  .main-heart1:hover {
+    opacity: 0;
+    color: #a16be0;
+  }
+  .main-heart2 {
+    font-size: 45px;
+    position: absolute;
+    color: #FF79DA;
+    opacity: 0;
+  }
+  .main-heart2:hover {
+    opacity: 1;
+    transition-duration: 500ms;
+    color: #ae80e5;
   }
   footer {
     background-color: #000;
@@ -387,6 +417,20 @@
     font-size: 40px;
     font-weight: 500;
     font-family: Shrikhand;
+  }
+  .fa-check-circle {
+    border: 1px solid #9356DC;
+    border-radius: 0 25px 25px 0;
+    width: 100px;
+    margin: -200px -35px -20px -200px;
+    padding: 40px 0 40px 0;
+    background-color: #9356DC;
+    color: #fff;
+    text-align: center;
+    font-size: 30px;
+  }
+  .fa-check-circle:hover {
+    transform: rotate(360deg);
   }
   .heart {
     color: #000;
