--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,19 @@
-$prime-color:red;
+// body {
+//     outline: 1px solid red;
+//     padding: 0;
+//     margin: 0;
+//     animation-name: body;
+//     animation-duration: 5s;
 
-h1{
-    color: $prime-color;
-    
-}
+//     @keyframes body {
+//         from {
+//             opacity: 0;
+//         }
+
+//         to {
+//             opacity: 1;
+//         }
+//     }
+
+// }
+
